# sphinxbase

./: .gitignore  BUILD.bazel  WORKSPACE
include/sphinxbase/: ad.h  bitarr.h  case.h  cmd_ln.h  err.h  fe.h  filename.h  glist.h  hash_table.h  heap.h  logmath.h  pio.h  prim_type.h  strfuncs.h
src/libsphinxad/: ad_base.c  ad_openal.c
src/libsphinxbase/fe/: fe_interface.c  fe_prespch_buf.h  fe_warp_inverse_linear.h  fixlog.c  yin.c
src/libsphinxbase/lm/: lm_trie.c  ngram_model.c
src/libsphinxbase/util/: bio.c  bitarr.c  case.c  ckd_alloc.c  cmd_ln.c  dtoa.c  err.c  filename.c  glist.c  hash_table.c  heap.c  pio.c  profile.c  slamch.c  slapack_lite.c  strfuncs.c
src/sphinx_fe/: sphinx_fe.c
test/regression/: BUILD.bazel
test/unit/test_util/: BUILD.bazel  test_bit_encode.c  test_bitarr.c  test_build_directory.c  test_filename.c  test_fopen.c  test_heap.c  test_macros.h  test_readfile.c
toolchain/: load_sound_linux_dep.bzl  load_sound_osx_dep.bzl  load_voice.bzl
