config_setting(
    name = "linux_x86",
    constraint_values = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
)

config_setting(
    name = "osx_x86",
    constraint_values = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:x86_64"
    ],
)

config_setting(
    name = "windows_x86",
    constraint_values = [
        "@bazel_tools//platforms:windows",
        "@bazel_tools//platforms:x86_64"
    ],
)

cc_library(
    name = "libsphinxad",
    srcs = [
        # "src/libsphinxad/ad_base.c",
        "src/libsphinxad/ad_openal.c",
    ] +
    select({
      "linux_x86": [
        # "src/libsphinxad/ad_oss.c",
        # "src/libsphinxad/ad_alsa.c",
        # "src/libsphinxad/ad_pulse.c",
      ],
      "osx_x86": [

      ],
    "windows_x86": [
        "src/libsphinxad/ad_win32.c",
      ]
  }),
    hdrs = [
        "include/sphinxbase/ad.h"
    ],
    deps = [
        "sphinxbase", 
        "@openal-soft//:al",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sphinx_fe",
    srcs = [
        "src/sphinx_fe/sphinx_fe.c",
        "src/sphinx_fe/cmd_ln_defn.h",
        "src/sphinx_fe/sphinx_wave2feat.h",
    ] +
    select({
      "linux_x86": [

      ],
      "osx_x86": [

      ],
    "windows_x86": [
        
      ]
  }),
    deps = [
        "sphinxbase",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
)



# Sphinx base
cc_library(
    name = "sphinxbase",
    srcs = glob(["src/libsphinxbase/**/*.c"]),
    hdrs = glob(["src/libsphinxbase/**/*.h", "include/sphinxbase/*.h"]),
    deps = [
        "bio", 
        "logmath", 
        "heap", 
        "pio", 
        "bitarr",
    ],
    includes = ["include/sphinxbase", "src/libsphinxbase"],
    visibility = ["//visibility:public"],
)
# FIXME
cc_library(
    name = "bitarr",
    srcs = [
        "src/libsphinxbase/util/bitarr.c"
    ],
    hdrs = ["include/sphinxbase/bitarr.h"],
    deps = ["common"],

)

cc_library(
    name = "pio",
    srcs = [
        "src/libsphinxbase/util/pio.c"
    ],
    hdrs = ["include/sphinxbase/pio.h"],
    deps = ["common"],

)
cc_library(
    name = "heap",
    srcs = [
        "src/libsphinxbase/util/heap.c"
    ],
    hdrs = ["include/sphinxbase/heap.h"],
    deps = ["common"],
)

cc_library(
    name = "logmath",
    hdrs = ["include/sphinxbase/logmath.h"],
    deps = ["common"],
)

cc_library(
    name = "bio",
    srcs = [
        "src/libsphinxbase/util/bio.c"
    ],
    hdrs = [
        "include/sphinxbase/bio.h",
        "include/sphinxbase/byteorder.h",
    ],
    deps = ["common"],
)

cc_library(
    name = "common",
    srcs = [
        "src/libsphinxbase/util/ckd_alloc.c",
        "src/libsphinxbase/util/case.c",
        "src/libsphinxbase/util/cmd_ln.c",
        "src/libsphinxbase/util/dtoa.c",
        "src/libsphinxbase/util/err.c",
        "src/libsphinxbase/util/filename.c",
        "src/libsphinxbase/util/glist.c",
        "src/libsphinxbase/util/hash_table.c",
        "src/libsphinxbase/util/strfuncs.c",
    ],
    hdrs = [
        "include/sphinx_config.h",
        "include/sphinxbase/case.h",
        "include/sphinxbase/ckd_alloc.h",
        "include/sphinxbase/cmd_ln.h",
        "include/sphinxbase/err.h",
        "include/sphinxbase/filename.h",
        "include/sphinxbase/glist.h",
        "include/sphinxbase/hash_table.h",
        "include/sphinxbase/sphinxbase_export.h", 
        "include/sphinxbase/strfuncs.h",
        "include/sphinxbase/prim_type.h",
        "include/config.h", 
    ],
    includes = ["include/sphinxbase", "include"]
)